--- a/GreisDocParser/App.config
+++ b/GreisDocParser/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <add key="baselineTemplateFile" value="\..\..\..\baselineTemplate.sql" />
-    <add key="PlainTextReferenceFile" value="\..\..\..\rawText.txt" />
+    <add key="PlainTextReferenceFile" value="\..\..\..\rawText-03-2012.txt" />
     <add key="MetaInfoFile" value="\..\..\..\meta-info.xml" />
     <add key="OutputDir" value="\..\..\.." />
     <add key="CppEnvTemplatesDir" value="..\..\..\GreisCppEnvTemplates" />
