--- a/JpsToDatabaseService/JpsToDatabaseService.vcxproj
+++ b/JpsToDatabaseService/JpsToDatabaseService.vcxproj
@@ -93,6 +93,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ChainedSink.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
