The first implementation of local-datacenter database based com-javad reader. The database request management is not implemented yet.

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,17 @@
 [General]
-Db.Driver=QMYSQL
-Db.DatabaseName=world
-Db.Username=root
-Db.Password=qwedrags
-Db.Hostname=127.0.0.1
-Db.Port=3306
+LocalDatabase.Driver=QMYSQL
+LocalDatabase.DatabaseName=world
+LocalDatabase.Username=root
+LocalDatabase.Password=ifzru
+LocalDatabase.Hostname=127.0.0.1
+LocalDatabase.Port=3306
+DataCenterDatabase.Driver=QMYSQL
+DataCenterDatabase.DatabaseName=world_data_center
+DataCenterDatabase.Username=root
+DataCenterDatabase.Password=ifzru
+DataCenterDatabase.Hostname=127.0.0.1
+DataCenterDatabase.Port=3306
 WrapIntoTransaction=true
-inserterBatchSize=25000
+inserterBatchSize=250
+dataChunkSize=250
+BaudRate=1500000
