--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,15 @@
 [General]
 LocalDatabase.Driver=QMYSQL
-LocalDatabase.DatabaseName=MOSCOW
-LocalDatabase.Username=gnss
-LocalDatabase.Password=gnss
-LocalDatabase.Hostname=10.86.23.11
+LocalDatabase.DatabaseName=world
+LocalDatabase.Username=root
+LocalDatabase.Password=ifzru
+LocalDatabase.Hostname=127.0.0.1
 LocalDatabase.Port=3306
 DataCenterDatabase.Driver=QMYSQL
-DataCenterDatabase.DatabaseName=MOSCOW
-DataCenterDatabase.Username=gnss
-DataCenterDatabase.Password=gnss
-DataCenterDatabase.Hostname=10.86.23.11
+DataCenterDatabase.DatabaseName=world_data_center
+DataCenterDatabase.Username=root
+DataCenterDatabase.Password=ifzru
+DataCenterDatabase.Hostname=127.0.0.1
 DataCenterDatabase.Port=3306
 WrapIntoTransaction=true
-inserterBatchSize=250
-dataChunkSize=250
-BaudRate=1500000
+inserterBatchSize=25000
