--- a/config.ini
+++ b/config.ini
@@ -13,3 +13,5 @@ DataCenterDatabase.Hostname=127.0.0.1
 DataCenterDatabase.Port=3306
 WrapIntoTransaction=true
 inserterBatchSize=250
+PortName=COM5
+BaudRate=115200
