--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,12 @@ LocalDatabase.Username=root
 LocalDatabase.Password=ifzru
 LocalDatabase.Hostname=127.0.0.1
 LocalDatabase.Port=3306
+Db.Driver=QMYSQL
+Db.DatabaseName=gnss_DEVE
+Db.Username=root
+Db.Password=2548997
+Db.Hostname=ipg90.geospace.ru
+Db.Port=3307
 DataCenterDatabase.Driver=QMYSQL
 DataCenterDatabase.DatabaseName=world_data_center
 DataCenterDatabase.Username=root
