--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ ENDMACRO()
 
 # Project settings
 
-PROJECT(jpsutil CXX)
+PROJECT(jpsutils CXX)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
@@ -34,8 +34,8 @@ FIND_PACKAGE(Qt5Sql)
 ## Boost
 
 SET(Boost_USE_STATIC_LIBS ON)
-SET(Boost_USE_MULTITHREADED OFF)
-FIND_PACKAGE(Boost COMPONENTS regex REQUIRED)
+SET(Boost_USE_MULTITHREADED ON)
+FIND_PACKAGE(Boost COMPONENTS regex system thread REQUIRED)
 INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
 
@@ -58,3 +58,4 @@ add_subdirectory(jpslogd)
 ENABLE_TESTING()
 
 ADD_TEST_EX(Common.Tests)
+ADD_TEST_EX(Greis.Tests)
