--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,44 @@ ALL_BUILD.vcxproj.filters
 CMakeCache.txt
 CTestTestfile.cmake
 cmake_install.cmake
+Common.Tests/Common.Tests.sln
+Common.Tests/Common.Tests.vcxproj
+Common.Tests/Common.Tests.vcxproj.filters
+Common.Tests/RUN_TESTS.vcxproj
+Common.Tests/RUN_TESTS.vcxproj.filters
+Common/Common.sln
+Common/Common.vcxproj
+Common/Common.vcxproj.filters
+Common/RUN_TESTS.vcxproj
+Common/RUN_TESTS.vcxproj.filters
+DatabaseToJps/DatabaseToJps.sln
+DatabaseToJps/DatabaseToJps.vcxproj
+DatabaseToJps/DatabaseToJps.vcxproj.filters
+DatabaseToJps/RUN_TESTS.vcxproj
+DatabaseToJps/RUN_TESTS.vcxproj.filters
+Greis.Tests/Greis.Tests.sln
+Greis.Tests/Greis.Tests.vcxproj
+Greis.Tests/Greis.Tests.vcxproj.filters
+Greis.Tests/RUN_TESTS.vcxproj
+Greis.Tests/RUN_TESTS.vcxproj.filters
+Greis/Greis.sln
+Greis/Greis.vcxproj
+Greis/Greis.vcxproj.filters
+Greis/RUN_TESTS.vcxproj
+Greis/RUN_TESTS.vcxproj.filters
+JpsToDatabase/JpsToDatabase.sln
+JpsToDatabase/JpsToDatabase.vcxproj
+JpsToDatabase/JpsToDatabase.vcxproj.filters
+JpsToDatabase/RUN_TESTS.vcxproj
+JpsToDatabase/RUN_TESTS.vcxproj.filters
+RUN_TESTS.vcxproj
+RUN_TESTS.vcxproj.filters
+ZERO_CHECK.vcxproj
+ZERO_CHECK.vcxproj.filters
+googletest.vcxproj
+googletest.vcxproj.filters
+jpslogd/jpslogd.sln
+jpslogd/jpslogd.vcxproj
+jpslogd/jpslogd.vcxproj.filters
+jpsutils.sln
+Win32/
