extracted platform level: infrastructure and device services

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,8 @@ add_subdirectory(Common)
 add_subdirectory(Common.Tests)
 add_subdirectory(Greis)
 add_subdirectory(Greis.Tests)
+add_subdirectory(Platform)
+add_subdirectory(Platform.Tests)
 add_subdirectory(DatabaseToJps)
 add_subdirectory(JpsToDatabase)
 add_subdirectory(jpslogd)
@@ -91,3 +93,4 @@ ENABLE_TESTING()
 
 ADD_TEST_EX(Common.Tests)
 ADD_TEST_EX(Greis.Tests)
+ADD_TEST_EX(Platform.Tests)
