--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,10 @@ bin
 obj
 *.suo
 .idea/
+Platform.Tests/Platform.Tests.dir/
+Platform/Platform.dir/
+Platform.Tests/Platform.Tests.sln
+Platform.Tests/Platform.Tests.vcxproj
+Platform.Tests/Platform.Tests.vcxproj.filters
+Platform/Platform.vcxproj
+Platform/Platform.vcxproj.filters
