--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Platform.Tests/Platform.Tests.vcxproj
 Platform.Tests/Platform.Tests.vcxproj.filters
 Platform/Platform.vcxproj
 Platform/Platform.vcxproj.filters
+Platform/Platform.sln
