1. fixed (disabled) file overwrite on logging sequence start 2. added skipDeviceConfig option into config.ini

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ Platform.Tests/Platform.Tests.vcxproj.filters
 Platform/Platform.vcxproj
 Platform/Platform.vcxproj.filters
 Platform/Platform.sln
+*.vcxproj.user
