--- a/Common.Tests/CMakeLists.txt
+++ b/Common.Tests/CMakeLists.txt
@@ -4,8 +4,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
 SET(PROJECT Common.Tests)
 
-SET(DEPENDS_ON_PROJECTS Common)
-
 FILE(GLOB_RECURSE HEADERS "include/*.h")
 
 FILE(GLOB_RECURSE SOURCES "src/*.cpp")
@@ -24,22 +22,19 @@ PROJECT(${PROJECT} CXX)
 
 # includes
 
-foreach(DEPENDENCY ${DEPENDS_ON_PROJECTS})
-	include_directories("../${DEPENDENCY}")
-endforeach()
-
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/..")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 include_directories("${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT}")
 
 # linking
 
 add_executable(${PROJECT} ${HEADERS} ${SOURCES} ${MOC_SOURCES})
-
+set_property(TARGET ${PROJECT} PROPERTY CXX_STANDARD 14)
 SET_TARGET_PROPERTIES(${PROJECT} PROPERTIES LINKER_LANGUAGE CXX)
 
 target_link_libraries(
     ${PROJECT}
-    ${DEPENDS_ON_PROJECTS}
+    Common
     ${Boost_LIBRARIES}
     Qt5::Core
     Qt5::Sql
@@ -49,4 +44,4 @@ target_link_libraries(
 
 # dependencies
 
-add_dependencies(${PROJECT} googletest ${DEPENDS_ON_PROJECTS})
+add_dependencies(${PROJECT} googletest Common)
